# fileinasnap_minimax

./: .gitignore  README.docx  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
mcp-server/: .env.example  DEPLOYMENT_REPORT.md  LICENSE  README.md  mcp-server.json  pyproject.toml  requirements.txt  run.sh  server.py
mcp-server/examples/: usage_examples.py
mcp-server/src/: __init__.py  config.py
mcp-server/src/providers/: base.py  manager.py  minimax.py  openrouter.py
mcp-server/src/tools/: fileinasnap_tools.py
mcp-server/src/utils/: file_processor.py
mcp-server/tests/: test_mcp_server.py
src/: App.tsx  index.css  main.tsx
src/components/: AIAnalysis.tsx  AIDashboard.tsx  ActivityFeed.tsx  DashboardOverview.tsx  DuplicateDetector.tsx  FileHistory.tsx  LanguageSelector.tsx  Login.tsx  MediaInsights.tsx  NavigationProgress.tsx  ProtectedRoute.tsx  RouteErrorBoundary.tsx  Sidebar.tsx  SkipToContent.tsx  SmartOrganizer.tsx  SmartTagger.tsx  TopBar.tsx
src/context/: AuthContext.tsx  I18nContext.tsx  LoadingContext.tsx
src/hooks/: useAccessibleRouting.ts  useAuth.ts  useMobileNavigation.ts  useRouteParams.ts
src/layouts/: AuthLayout.tsx  MainLayout.tsx
src/lib/: ai-service.ts  design-system.ts  i18n.ts  supabase.ts
src/locales/de/: activity.json  history.json  media.json
src/locales/en/: actions.json  activity.json  auth.json  common.json  dashboard.json  errors.json  folders.json  history.json  media.json  navigation.json
src/locales/es/: activity.json  common.json  folders.json  history.json  media.json  (+1 more)
src/pages/: AIAnalysisPage.tsx  DashboardPage.tsx  DuplicateDetectorPage.tsx  FolderPage.tsx  NotFoundPage.tsx  SmartOrganizerPage.tsx  SmartTaggerPage.tsx
src/router/: index.tsx
src/test/: Sidebar.test.tsx  auth-routing.test.tsx  router.test.tsx  setup.ts
(+17 files in other folders)
