[project]
name = "fileinasnap-mcp-server"
version = "1.0.0"
description = "Universal AI-Powered MCP Server for FileInASnap with OpenRouter and MiniMax Integration"
authors = [
    { name = "MiniMax Agent", email = "agent@minimax.ai" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.1",
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "httpx>=0.28.1",
    "pydantic>=2.6.1",
    "python-dotenv>=1.0.1",
    "pillow>=10.0.0",
    "python-magic>=0.4.27",
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.1.2",
    "moviepy>=1.0.3",
    "mutagen>=1.47.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "textstat>=0.7.3",
    "spacy>=3.7.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.25.0",
    "imagehash>=4.3.1",
    "ffmpeg-python>=0.2.0",
    "aiofiles>=23.1.0",
    "pathlib>=1.0.1",
    "openai>=1.12.0",
    "anthropic>=0.18.1",
    "websockets>=12.0",
    "redis>=5.0.1",
    "celery>=5.3.4",
    "SQLAlchemy>=2.0.25",
    "alembic>=1.13.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true